# globe_view_with_agent

./: .gitignore  README.md  app.py  data_loader.py  pyproject.toml
config/: __init__.py  api.py  dashboard.py  data.py  paths.py  server.py  validation.py
data/: consulates_singapore.json
helpers/: __init__.py  banner.py  cache.py  consulate_validation.py  countriesnow.py  country.py  formatting.py  mfa.py  ssl_patch.py  un_protocol.py  values.py  worldbank.py
scripts/: fetch_mfa_representatives.py  validate_consulates_singapore.py
