[project]
name = "globe-view-with-agent"
version = "0.1.0"
description = "Interactive world-map dashboard showing key country information on hover."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash>=2.16,<3",
    "plotly>=5.20",
    "pandas>=2.0",
    "requests>=2.31",
    "truststore>=0.9",
    "python-dotenv>=1.0",
]

[tool.uv]
package = false
