[project]
name = "globe-view-with-agent"
version = "0.1.0"
description = "Interactive world-map dashboard showing key country information on hover."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dash>=3.3,<4",
    "plotly>=5.20",
    "pandas>=2.0",
    "requests>=2.31",
    "truststore>=0.9",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
]

[dependency-groups]
dev = [
    "pip-audit>=2.7",
    "pylint>=3.3",
]

[tool.uv]
package = false
override-dependencies = [
    "flask>=3.1.3",
    "werkzeug>=3.1.6",
]

[tool.pylint.main]
py-version = "3.12"
jobs = 0
init-hook = 'import sys; from pathlib import Path; sys.path.insert(0, str(Path(".").resolve()))'
ignore-paths = ["^helpers/ssl_patch\\.py$"]

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "too-few-public-methods",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-return-statements",
]

[tool.pylint.format]
max-line-length = 88
